# Group-10

./: Coursework Brief  WQDataset.hpp  WQSample.hpp
Adam/: WQDataset.cpp  WQTableModel.hpp  main.cpp
Adam/PAGE 2 AND 4/: FCwindow.cpp  FCwindow.hpp  POPwindow.cpp  POPwindow.hpp
Adam/WQMonitor/: CMakeLists.txt  ComplianceWindow.cpp  ComplianceWindow.hpp  FCwindow.cpp  LWindow.cpp  LWindow.hpp  POPwindow.cpp  POPwindow.hpp  PollutantChartWidget.hpp  WQDataset.hpp  WQTableModel.cpp  homePage.cpp  main.cpp  rawwindow.cpp
Adam/csv reader/: WQDataset.cpp  WQSample.cpp
Adam/it_final/: CMakeLists.txt  POPwindow.cpp  POPwindow.hpp  WQSample.hpp  rawwindow.cpp  rawwindow.hpp
Adam/v2/: CMakeLists.txt  POPwindow.cpp  WQSample.cpp
Adam/v2.2/: POPwindow.cpp  POPwindow.hpp
Amin/: CMakeLists.txt  Place all your work in this folder  PollutantChartWidget.cpp  PollutantChartWidget.hpp  PollutantOverviewWindow.cpp  PollutantOverviewWindow.hpp  main.cpp
Jesper/: window.cpp  window.hpp
Jesper/UpdatedPchartWidget/: PollutantChartWidget.cpp
Jesper/update2/: CMakeLists.txt  POPwindow.cpp  POPwindow.hpp  filterProxy.cpp  main.cpp  rawwindow.cpp  rawwindow.hpp
Jesper/update3/: CMakeLists.txt  PollutantChartWidget.cpp  PollutantChartWidget.hpp  PollutantOverviewWindow.cpp  PollutantOverviewWindow.hpp  filterProxy.hpp  homePage.cpp  main.cpp  rawwindow.cpp  rawwindow.hpp
Michail/: CMakelists.txt  Makefile  Place all your work in this folder  compliancedashboard.cpp  compliancedashboard.h  compliancedashboard.hpp  maintest.cpp  test.pro
Michail/src/: ComplianceWindow.cpp  ComplianceWindow.hpp  WQSample.cpp  WQTableModel.cpp  main.cpp
WQMonitor2/: CMakeLists.txt  ComplianceWindow.cpp  FCwindow.cpp  FCwindow.hpp  LWindow.cpp  POPwindow.cpp  PollutantChartWidget.cpp  PollutantOverviewWindow.cpp  homePage.cpp  homePage.hpp  rawwindow.cpp  rawwindow.hpp  resources.qrc
WQMonitor2/translations/: french.ts
